# gapic-generator-cpp

examples/vision/: BUILD.bazel  WORKSPACE  vision_main.cc
