# Copyright 2019 Google Inc.  All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_gapic_generator_cpp//rules_gapic/cpp:cc_gapic.bzl", "cc_gapic_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

cc_gapic_library(
    name = "cc_vision_gapic",
    src = "@com_google_googleapis//google/cloud/vision/v1:vision_proto_with_info",
    package = "google.cloud.vision.v1",
    deps = [
        "@com_google_googleapis//google/cloud/vision/v1:vision_cc_proto",
        "@com_google_googleapis//google/cloud/vision/v1:vision_cc_grpc"
    ]
)

cc_binary(
    name = "vision_gapic_helloworld",
    srcs = ["vision_main.cc"],
    deps = [
        ":cc_vision_gapic",
        "@com_google_googleapis//google/cloud/vision/v1:vision_cc_proto",
        "@com_google_googleapis//google/cloud/vision/v1:vision_cc_grpc"
    ]
)
